--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "normalize.css": "^8.0.1",
+    "react-multi-carousel": "^2.8.5",
     "react-responsive": "^10.0.1"
   }
 }
